# dxlib-rs

./: .gitignore  Cargo.toml  LICENSE  PROGRESS.md  README.md  SETUP.md
dxlib/: Cargo.toml
dxlib-sys/: Cargo.toml
dxlib-sys/.cargo/: config.toml
dxlib-sys/examples/: 01-keyinput-sys.rs  01-keyinput.rs  02-jump-sys.rs  02-jump.rs  03-map-sys.rs  03-map.rs  06-soundnovel-sys.rs  06-soundnovel.rs  06-soundnovel.txt  image.rs  live2d-sys.rs  live2d.rs  shape.rs  transparent-sys.rs  transparent.rs
dxlib-sys/src/: consts.rs  data.rs  ffi.rs  lib.rs
dxlib/examples/: 01_test.rs  3d_model.rs  3d_shader.rs  3d_simple.rs  cpal.rs  ecs.rs  input.rs  live2d.rs  shape.rs  test.rs
dxlib/examples/breakout/: components.rs  entities.rs  game.rs  main.rs  resources.rs  systems.rs
dxlib/src/: application.rs  color.rs  error.rs  lib.rs  live2d.rs  math.rs  matrix.rs  prelude.rs  screen.rs  shapes.rs  sound.rs  utils.rs  vector.rs  writer.rs
dxlib/src/dx3d/: camera.rs  draw.rs  light.rs  mod.rs  model.rs  prelude.rs  shader.rs  shapes.rs
dxlib/src/ext/: mod.rs
dxlib/src/ext/debug/: camera.rs  fps.rs  mod.rs
dxlib/src/ext/models/: grid.rs  mod.rs
dxlib/src/graphics/: image.rs  live2d.rs  mod.rs  shapes.rs  text.rs
dxlib/src/input/: joypad.rs  keyboard.rs  mod.rs  mouse.rs
dxlib/src/math/: angle.rs  matrix.rs  mod.rs  vector.rs
dxlib/src/plugin/: antialias.rs  background.rs  basic.rs  mod.rs
resources/shader/: PixelShader.fx  VertexShader.fx
