[package]
name = "dxlib-sys"
version = "0.1.0"
authors = ["Tomoya Ishii <ahahah114514@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libloading = "0.7.0"
lazy_static = "1.4.0"
function_name = "0.2.0"
anyhow = "1.0.40"
libc = "0.2.93"

encoding_rs = "0.8.28"

[dependencies.winapi]
version = "0.3"
features = ["winuser", "windef"]
