[package]
name = "dxlib"
version = "0.1.0"
authors = ["Tomoya Ishii <tmy1997530@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dxlib-sys = { path = "../dxlib-sys" }
thiserror = "1.0.24"
anyhow = "1.0.40"
bitflags = "1.2.1"
enum-iterator = "0.6.0"
encoding_rs = "0.8.28"
derive_more = "0.99.13"
num-traits = "0.2.14"

[dev-dependencies]
rand = "0.8"
