[package]
name = "dxlib"
version = "0.1.0"
authors = ["Tomoya Ishii <tmy1997530@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
unstable = []

[dependencies]
dxlib-sys = { path = "../dxlib-sys" }
thiserror = "1.0.24"
anyhow = "1.0.40"
bitflags = "1.2.1"
enum-iterator = "0.6.0"
encoding_rs = "0.8.28"
derive_more = "0.99.13"
num = "0.4.0"
num-traits = "0.2.14"
num-derive = "0.3.3"
smart-default = "0.6.0"
parking_lot = "0.11.1"

[dependencies.winapi]
version = "0.3"
features = ["winuser", "windef"]

[dev-dependencies]
rand = "0.8"

cpal = "*"
rustfft = "*"
